c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/break_immediate.c
int main(void) {
    int a = 10;
    while ((a = 1))
        break;
    return a;
}
