c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/while_missing_paren.c
int main(void) {
    while 1 {
        return 0;
    }
}